--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,13 +4,36 @@ module(
     compatibility_level = 1,
 )
 
+bazel_dep(name = "rules_python", version = "0.24.0")
+
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+
+python.toolchain(
+    is_default = True,
+    python_version = "3.10",
+)
+
+use_repo(python, "python_versions", "python_3_10")
+
+register_toolchains("@python_3_10//:all")
+
+pip.parse(
+    hub_name = "demo_deps",
+    python_version = "3.10",
+    requirements_lock = "//:requirements.txt",
+)
+
+use_repo(pip, "demo_deps")
+
 bazel_dep(name = "demo_transitive", version = "")
 local_path_override(
     module_name = "demo_transitive",
     path = "./transitive_dep_module/",
 )
 
-bazel_dep(name = "dependency_bazelizer", version = "0.1.0")
+bazel_dep(name = "dependency_bazelizer", version = "0.2.0")
 dependency_bazelizer = use_extension("@dependency_bazelizer//:input.bzl", "dependency_bazelizer")
 dependency_bazelizer.config(deb_packages_input_file = "//:deb_packages.in", storage_config_file = "//:storage_config.json")
 use_repo(dependency_bazelizer, "dep_bazelizer_config")
