--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -33,9 +33,13 @@ local_path_override(
     path = "./transitive_dep_module/",
 )
 
-bazel_dep(name = "dependency_bazelizer", version = "0.1.0")
+bazel_dep(name = "dependency_bazelizer", version = "0.2.0")
 dependency_bazelizer = use_extension("@dependency_bazelizer//:input.bzl", "dependency_bazelizer")
-dependency_bazelizer.config(deb_packages_input_file = "//:deb_packages.in", storage_config_file = "//:storage_config.json")
+dependency_bazelizer.config(
+    deb_packages_input_file = "//:deb_packages.in", 
+    storage_config_file = "//:storage_config.json",
+    registry_path_relative_to_root = "my_registry"
+)
 use_repo(dependency_bazelizer, "dep_bazelizer_config")
 
 #bazel_dep(name="iproute2_amd64", version="5.15.0-1ubuntu2")
