Update MODULE.bazel (quick fix)

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -42,4 +42,4 @@ dependency_bazelizer.config(
 )
 use_repo(dependency_bazelizer, "dep_bazelizer_config")
 
-bazel_dep(name="iproute2_amd64", version="5.15.0-1ubuntu2")
+#bazel_dep(name="iproute2_amd64", version="5.15.0-1ubuntu2")
